-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.0 Beta2
-
None
-
6458e2129 (dev), c24d5e7fd (6.6)
Setting itemLabelFormat for Surface3DSeries does nothing.
For Gerrit Dashboard: QTBUG-116140 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
497841,3 | Item format follows the setting | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
497887,2 | Item format follows the setting | 6.6 | qt/qtgraphs | Status: MERGED | +2 | 0 |