Item format follows the setting

Fixes: QTBUG-116140
Change-Id: I5c3238564cbd9e7b334739857eb40967e22649d7
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 6458e2129c5664535ba4173415a6303110a46d1c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>